--- a/calculator2JQuery.html
+++ b/calculator2JQuery.html
@@ -6,7 +6,7 @@
 		<title>jQuery Calculator</title>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="calculator2JQuery.js"></script>
+		<script src="calculator2JQuery.js" defer></script>
 		<link rel="stylesheet" type="text/css" href="calculator2JQuery.css">
 
 	</head>
